--- a/slides/css/custom.css
+++ b/slides/css/custom.css
@@ -84,3 +84,14 @@ code {
     border-radius: 0.5rem;
     box-shadow: 0px 0px 10px 3px #6d6d6d56;
 }
+
+.conum {
+    width: 2rem !important;
+    height: 2rem !important;
+    font-size: 1.2rem !important;
+    line-height: 2.1rem !important;
+}
+
+.colist td {
+    font-size: 1.5rem !important;
+}
